Adjusts card components shadow

--- a/src/assets/scss/abstract/variables.scss
+++ b/src/assets/scss/abstract/variables.scss
@@ -5,4 +5,9 @@
 
   --color-orange-light-neutral: #ffddb3;
   --color-orange-dark-neutral: #e4c59f;
+
+  --border-radius-md: 8px;
+  --border-radius-lg: 10px;
+
+  --box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.15);
 }
