--- a/src/assets/scss/components/articleCard.scss
+++ b/src/assets/scss/components/articleCard.scss
@@ -1,5 +1,4 @@
-.reportCard {
+.articleCard {
   border-radius: var(--border-radius-md);
   box-shadow: var(--box-shadow) !important;
-  margin: 2rem 0;
 }
