--- a/src/assets/scss/components/articleCard.scss
+++ b/src/assets/scss/components/articleCard.scss
@@ -1,4 +1,23 @@
 .articleCard {
   border-radius: var(--border-radius-md);
   box-shadow: var(--box-shadow) !important;
+  
+
+  &__mediaWrapper {
+    border-top-right-radius: var(--border-radius-md);
+    border-top-left-radius: var(--border-radius-md);
+    position: relative;
+    width: 100%;
+    padding-top: calc(100% / 5 * 3);
+    overflow: hidden;
+  }
+
+  &__media {
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
