--- a/api/amp/amp.ejs
+++ b/api/amp/amp.ejs
@@ -17,16 +17,16 @@
     <link rel="canonical" href="<%= url %>" />
     <style amp-custom>
       h1 {
-        color: red;
+        color: rgb(179, 124, 7);
+      }
+      .container {
+        margin: 20px;
       }
     </style>
     <script type="application/ld+json">
       <%= JSON.stringify(ld) %>
     </script>
     <style amp-boilerplate>
-      .container {
-        margin: 20px;
-      }
       body {
         -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
         -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
