--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,30 +1,7 @@
-/*
- @font-face {
-  font-family: 'Noto Sans Myanmar';
-  src: local('Noto Sans Myanmar'), url('./fonts/NotoSansMyanmar-Regular.woff') format('woff'), url('./fonts/NotoSansMyanmar-Regular.ttf') format('ttf');
-}
+@import url("https://fonts.googleapis.com/css?family=Padauk:400,500,700");
+@import url("https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css");
 
-@font-face {
-  font-family: 'Noto Sans Myanmar';
-  src: local('Noto Sans Myanmar'), url('./fonts/NotoSansMyanmar-Bold.woff') format('woff'), url('./fonts/NotoSansMyanmar-Bold.ttf') format('ttf');
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: 'Noto Sans Zawgyi';
-  src: local('Noto Sans Zawgyi'), url('./fonts/NotoSansZawgyi-Regular.woff') format('woff'), url('./fonts/NotoSansZawgyi-Regular.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: "Noto Sans Zawgyi";
-  src: local("Noto Sans Zawgyi"),
-    url("./fonts/NotoSansZawgyi-Bold.woff") format("woff"),
-    url("https://www.mmwebfonts.com/fonts/NotoSansZawgyi-Bold.ttf")
-      format("ttf");
-  font-weight: bold;
-} */
-
-[lang="my-MM"],
-[lang="my-MM"] * {
+[lang="my"],
+[lang="my"] * {
   font-family: "Padauk", "Pyidaungsu", sans-serif;
 }
